force-app/main/default/objects/Marketplace__c/Marketplace__c.object-meta.xml
<CustomObject>
    <label>Marketplace</label>
    <nameField>
        <label>Marketplace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markeplaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>