force-app/main/default/objects/Marketplace__c/fields/all_time_average_discount_rate__c.field-meta.xml
<CustomField>
    <fullName>all_time_average_discount_rate__c</fullName>
    <formula>if(All_time_invoice_count_RH__c = 0,
0,
 sum_of_discount_rates_RH__c  /  All_time_invoice_count_RH__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>all time average discount rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>