force-app/main/default/objects/Marketplace__c/fields/all_time_average_invoice_value__c.field-meta.xml
<CustomField>
    <fullName>all_time_average_invoice_value__c</fullName>
    <formula>if( All_time_invoice_count_RH__c  = 0, 0,
 All_Time_Invoice_Value_RH__c  / All_time_invoice_count_RH__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>all time average invoice value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>