force-app/main/default/objects/Marketplace__c/fields/All_time_funded_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>All_time_funded_Amount_2__c</fullName>
    <label>All time funded Amount RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>