force-app/main/default/objects/Marketplace__c/fields/All_time_funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>All_time_funded_Amount__c</fullName>
    <label>All time funded Amount</label>
    <summarizedField>Supplier_Buyer_Map__c.Total_Financing_value_alltime__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>