force-app/main/default/objects/Marketplace__c/fields/All_time_invoice_count__c.field-meta.xml
<CustomField>
    <fullName>All_time_invoice_count__c</fullName>
    <label>All time invoice count</label>
    <summarizedField>Supplier_Buyer_Map__c.number_of_invoices_all_time__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>