force-app/main/default/objects/Marketplace__c/fields/All_time_invoice_count_RH__c.field-meta.xml
<CustomField>
    <fullName>All_time_invoice_count_RH__c</fullName>
    <label>All time invoice count RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>