force-app/main/default/objects/Marketplace__c/fields/All_Time_Invoice_Value__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Invoice_Value__c</fullName>
    <label>All Time Invoice Value</label>
    <summarizedField>Supplier_Buyer_Map__c.Total_Invoice_value_alltime__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>