force-app/main/default/objects/Marketplace__c/fields/All_Time_Invoice_Value_RH__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Invoice_Value_RH__c</fullName>
    <label>All Time Invoice Value RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>