force-app/main/default/objects/Marketplace__c/fields/Available_on_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Available_on_Marketplace__c</fullName>
    <label>Available on Marketplace</label>
    <summarizedField>Supplier_Buyer_Map__c.Total_remaining_amount_on_Marketplace__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>