force-app/main/default/objects/Marketplace__c/fields/Available_on_Marketplace_RH__c.field-meta.xml
<CustomField>
    <fullName>Available_on_Marketplace_RH__c</fullName>
    <label>Available on Marketplace RH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>