force-app/main/default/objects/Marketplace__c/fields/closed__c.field-meta.xml
<CustomField>
    <fullName>closed__c</fullName>
    <label>closed</label>
    <summarizedField>Supplier_Buyer_Map__c.invoice_deal_closed_amount__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>