force-app/main/default/objects/Marketplace__c/fields/closed_RH__c.field-meta.xml
<CustomField>
    <fullName>closed_RH__c</fullName>
    <label>closed RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>