force-app/main/default/objects/Marketplace__c/fields/currency_symbol__c.field-meta.xml
<CustomField>
    <fullName>currency_symbol__c</fullName>
    <label>currency symbol</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>