force-app/main/default/objects/Marketplace__c/fields/days_with_no_defaults__c.field-meta.xml
<CustomField>
    <fullName>days_with_no_defaults__c</fullName>
    <formula>today()  -  last_default_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days with no defaults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>