force-app/main/default/objects/Marketplace__c/fields/default_marketplace__c.field-meta.xml
<CustomField>
    <fullName>default_marketplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>default marketplace</label>
    <type>Checkbox</type>
</CustomField>