force-app/main/default/objects/Marketplace__c/fields/FX_Rate_for_MI__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate_for_MI__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>FX Rate for MI</label>
    <referenceTo>FX_Rates__c</referenceTo>
    <relationshipLabel>Markeplaces</relationshipLabel>
    <relationshipName>Markeplaces</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>