force-app/main/default/objects/Marketplace__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <formula>IMAGE( icon_URL__c  , &quot;logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>icon</label>
    <type>Text</type>
</CustomField>