force-app/main/default/objects/Marketplace__c/fields/icon_URL__c.field-meta.xml
<CustomField>
    <fullName>icon_URL__c</fullName>
    <label>icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>