force-app/main/default/objects/Marketplace__c/fields/in_progress_amount__c.field-meta.xml
<CustomField>
    <fullName>in_progress_amount__c</fullName>
    <label>in progress amount</label>
    <summarizedField>Supplier_Buyer_Map__c.total_invoice_value_in_progress__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>