force-app/main/default/objects/Marketplace__c/fields/in_progress_amount_RH__c.field-meta.xml
<CustomField>
    <fullName>in_progress_amount_RH__c</fullName>
    <label>in progress amount RH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>