force-app/main/default/objects/Marketplace__c/fields/is_Private__c.field-meta.xml
<CustomField>
    <fullName>is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Private</label>
    <type>Checkbox</type>
</CustomField>