force-app/main/default/objects/Marketplace__c/fields/last_default_date__c.field-meta.xml
<CustomField>
    <fullName>last_default_date__c</fullName>
    <label>last default date</label>
    <type>Date</type>
</CustomField>