force-app/main/default/objects/Marketplace__c/fields/latest_to_usd_rate__c.field-meta.xml
<CustomField>
    <fullName>latest_to_usd_rate__c</fullName>
    <label>latest to usd rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>