force-app/main/default/objects/Marketplace__c/fields/minimum_purchase_amount__c.field-meta.xml
<CustomField>
    <fullName>minimum_purchase_amount__c</fullName>
    <label>minimum purchase amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>