force-app/main/default/objects/Marketplace__c/fields/number_of_defaults__c.field-meta.xml
<CustomField>
    <fullName>number_of_defaults__c</fullName>
    <label>number of defaults</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>