force-app/main/default/objects/Marketplace__c/fields/sum_of_discount_rates__c.field-meta.xml
<CustomField>
    <fullName>sum_of_discount_rates__c</fullName>
    <description>this is only useful to work out the average</description>
    <label>sum of discount rates</label>
    <summarizedField>Supplier_Buyer_Map__c.sum_of_discount_rates__c</summarizedField>
    <summaryForeignKey>Supplier_Buyer_Map__c.Marketplace__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>