force-app/main/default/objects/Marketplace__c/fields/sum_of_discount_rates_RH__c.field-meta.xml
<CustomField>
    <fullName>sum_of_discount_rates_RH__c</fullName>
    <label>sum of discount rates RH</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>